# cpueaxh

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  implementation_plan.md
cpueaxh/: cpueaxh.vcxproj
example/: example.vcxproj
kcpueaxh/: kcpueaxh.vcxproj
kexample/: kexample.vcxproj
python/: HOST_CALL_EVALUATION.md  README.md  cpueaxh.py  guest_demo.py  pyproject.toml
python/native_bridges/: bridge_helpers.cpp  dllmain.cpp
python/src/cpueaxh/: __init__.py  _bindings.py  _constants.py  _loader.py  engine.py  errors.py  host.py  types.py
python/src/cpueaxh/examples/: __init__.py  cpuid_escape_demo.py  guest_demo.py  hook_demo.py  host_call_demo.py  ntreadfile_demo.py  ntreadfile_shellcode_demo.py
python/tests/: test_smoke.py
test/: test.vcxproj
