[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpueaxh"
dynamic = ["version"]
description = "Python ctypes glue for the cpueaxh x86-64 emulator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Taardisaa" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
cpueaxh-guest-demo = "cpueaxh.examples.guest_demo:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "cpueaxh.__version__" }
